--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http:3.91.82.79:9000/</sonar.host.url>
+		<sonar.host.url>http:52.90.132.50:9000/</sonar.host.url>
 		<sonar.login>60500fa7eb1b87dfe2cb5c3e1d1a339ce8d49ecf</sonar.login>
 		<!-- <sonar.password>admin</sonar.password> -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -95,13 +95,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>hhttp://44.204.53.143:8081/repository/tesla-releases/</url>
+	      <url>hhttp://http://44.201.118.94:8081/repository/tesla-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://44.204.53.143:8081/repository/tesla-snapshot/</url>
+	      <url>http://http://44.201.118.94:8081/repository/tesla-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
