--- a/pom.xml
+++ b/pom.xml
@@ -95,13 +95,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://18.212.33.83:8081/repository/tesla-releases/</url>
+	      <url>http://54.235.236.101/:8081/repository/tesla-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://18.212.33.83:8081/repository/tesla-snapshot/</url>
+	      <url>http://54.235.236.101:8081/repository/tesla-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
